--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,8 @@
 @tailwind utilities;
 
 main{
-    max-width: 1280px;
-    margin: auto;
+width: 100%;
+   
     min-height: 90vh;
     padding: 10px;
 }
